// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Hand component matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Hand
    dealer={false}
    hand={
      Array [
        "SA",
        "SJ",
      ]
    }
    handFlipped={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          card="SA"
          faceUp={true}
        />,
        <Card
          card="SJ"
          faceUp={true}
        />,
      ],
      "className": "PlayField_Hand",
      "style": Object {
        "display": "inline-block",
        "margin": "auto",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "card-face-0",
        "nodeType": "class",
        "props": Object {
          "card": "SA",
          "faceUp": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "card-face-1",
        "nodeType": "class",
        "props": Object {
          "card": "SJ",
          "faceUp": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            card="SA"
            faceUp={true}
          />,
          <Card
            card="SJ"
            faceUp={true}
          />,
        ],
        "className": "PlayField_Hand",
        "style": Object {
          "display": "inline-block",
          "margin": "auto",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "card-face-0",
          "nodeType": "class",
          "props": Object {
            "card": "SA",
            "faceUp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "card-face-1",
          "nodeType": "class",
          "props": Object {
            "card": "SJ",
            "faceUp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Test Hand component matches the snapshot with dealer = true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Hand
    dealer={true}
    hand={
      Array [
        "SA",
        "SJ",
      ]
    }
    handFlipped={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          card="SA"
          faceUp={true}
        />,
        <Card
          card="SJ"
          faceUp={false}
        />,
      ],
      "className": "PlayField_Hand",
      "style": Object {
        "display": "inline-block",
        "margin": "auto",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "card-face-0",
        "nodeType": "class",
        "props": Object {
          "card": "SA",
          "faceUp": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "card-face-1",
        "nodeType": "class",
        "props": Object {
          "card": "SJ",
          "faceUp": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            card="SA"
            faceUp={true}
          />,
          <Card
            card="SJ"
            faceUp={false}
          />,
        ],
        "className": "PlayField_Hand",
        "style": Object {
          "display": "inline-block",
          "margin": "auto",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "card-face-0",
          "nodeType": "class",
          "props": Object {
            "card": "SA",
            "faceUp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "card-face-1",
          "nodeType": "class",
          "props": Object {
            "card": "SJ",
            "faceUp": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Test Hand component matches the snapshot with handFlipped = true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Hand
    dealer={false}
    hand={
      Array [
        "SA",
        "SJ",
      ]
    }
    handFlipped={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          card="SA"
          faceUp={true}
        />,
        <Card
          card="SJ"
          faceUp={true}
        />,
      ],
      "className": "PlayField_Hand",
      "style": Object {
        "display": "inline-block",
        "margin": "auto",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "card-face-0",
        "nodeType": "class",
        "props": Object {
          "card": "SA",
          "faceUp": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "card-face-1",
        "nodeType": "class",
        "props": Object {
          "card": "SJ",
          "faceUp": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            card="SA"
            faceUp={true}
          />,
          <Card
            card="SJ"
            faceUp={true}
          />,
        ],
        "className": "PlayField_Hand",
        "style": Object {
          "display": "inline-block",
          "margin": "auto",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "card-face-0",
          "nodeType": "class",
          "props": Object {
            "card": "SA",
            "faceUp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "card-face-1",
          "nodeType": "class",
          "props": Object {
            "card": "SJ",
            "faceUp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
